[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.poetry]
name = "mokka"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Andrej Rode <rode@kit.edu>",
    "Shrinivas Chimmalgi <shrinivas.chimmalgi@kit.edu>",
    "Benedikt Geiger <benedikt.geiger@kit.edu>",
    "Laurent Schmalen <laurent.schmalen@kit.edu>",
]
maintainers = [
    "Andrej Rode <rode@kit.edu>",
    "Shrinivas Chimmalgi <shrinivas.chimmalgi@kit.edu>",
    "Benedikt Geiger <benedikt.geiger@kit.edu>",
]

version = "1.0.1"
description = "A machine learning toolbox for communications engineering"
keywords = ["communications engineering", "machine learning"]
# dynamic = ["version", "description"]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
numpy = "^1.26.4"
torch = "^2.5.1"
torchaudio = "^2.5.1"
matplotlib = "^3.9.2"
scipy = "^1.13.1"
pyqtgraph = "^0.13.7"
jaxtyping = "^0.2.36"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-coverage = "*"
pytest-datafiles = "*"
black = "*"
flake8 = "*"
pylint = "*"
python-lsp-server = {version = "*", extras = ["all"]}
pyls-flake8 = "*"
python-lsp-black = "*"
sphinx = "*"
sphinx-pyproject = "*"
sphinx_rtd_theme = "*"
tox = "*"
tox-gh-actions = "*"

[tool.poetry.extras]
tf = [
    "sionna"
]
remotelog = [
    "wandb",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore",
    "default:::mokka",
]

[tool.pydocstyle]
add_select = "D417,D419"

[tool.sphinx-pyproject]
language = "en"
package_root = "mokka"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx_rtd_theme",
    "sphinx.ext.mathjax",
]
templates_path = [ "_templates", ]
html_static_path = [ "_static", ]
source_suffix = ".rst"
master_doc = "index"
html_theme = "sphinx_rtd_theme"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]
[tool.tox]
legacy_tox_ini = """
[tox]
description = list of environments against which tox runs the tests
envlist =
    flake8
    black
    pydocstyle
    3.10
    3.11
    3.12

# See https://tox.readthedocs.io/en/latest/example/package.html#flit
isolated_build = True
isolated_build_env = build
skip_missing_interpreters = True
py_version =
    3.10, flake8, black, pydocstyle: 3.10
    3.11: 3.11
    3.12: 3.12


[gh-actions]
python =
    3.10: flake8, black, pydocstyle, py310
    3.11: 3.11
    3.12: 3.12

[testenv]
# install pytest in the virtualenv where commands will be executed
allowlist_externals =
    poetry
    bash
setenv =
    PYTHONUNBUFFERED = yes
    PIP_PREFER_BINARY = 1
passenv = *
extras =
  torch
  dev
# This is already the default, but we include it here
# to remind ourselves that usedevelop is incompatible with flit,
# see https://tox.readthedocs.io/en/latest/config.html#conf-usedevelop
usedevelop = False
commands_pre =
    poetry env use {[tox]py_version}
    poetry install --with=dev
command =
    poetry run pytest {env:PYTEST_MARKERS:} {env:PYTEST_EXTRA_ARGS:} {posargs:-vv}

[testenv:flake8]
description = this environments checks for flake8 and black
deps =
    black==22.3.0
    flake8
    build
skip_install = true
commands =
    flake8 src tests

[testenv:pydocstyle]
description = this environments checks formatting with pydocstyle
deps =
    pydocstyle
skip_install = true
commands =
    pydocstyle --count src/

[testenv:black]
description = reformats the code using black
deps =
    black==22.3.0
skip_install = true
commands =
    black src tests
"""

[project]
authors = [
    {name = "Andrej Rode", email = "rode@kit.edu"},
    {name = "Shrinivas Chimmalgi", email = "shrinivas.chimmalgi@kit.edu"},
    {name = "Benedikt Geiger", email = "benedikt.geiger@kit.edu"},
    {name = "Laurent Schmalen", email = "laurent.schmalen@kit.edu"},
]
maintainers = [
    {name = "Andrej Rode", email = "rode@kit.edu"},
    {name = "Shrinivas Chimmalgi", email = "shrinivas.chimmalgi@kit.edu"},
    {name = "Benedikt Geiger", email = "benedikt.geiger@kit.edu"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "attrs<24.0.0,>=23.2.0",
    "numpy<2.0.0,>=1.26.4",
    "torch<3.0.0,>=2.5.1",
    "torchaudio<3.0.0,>=2.5.1",
    "matplotlib<4.0.0,>=3.9.2",
    "scipy<2.0.0,>=1.13.1",
    "pyqtgraph<1.0.0,>=0.13.7",
    "jaxtyping<1.0.0,>=0.2.36",
]
name = "mokka"
readme = "README.md"
version = "1.0.1"
description = "A machine learning toolbox for communications engineering"
keywords = [
    "communications engineering",
    "machine learning",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "pytest-datafiles",
    "black",
    "flake8",
    "pylint",
    "python-lsp-server[all]",
    "pyls-flake8",
    "python-lsp-black",
    "sphinx",
    "sphinx-pyproject",
    "sphinx-rtd-theme",
    "tox",
    "tox-gh-actions",
]
