[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore",
    "default:::mokka",
]

[tool.pydocstyle]
add_select = "D417,D419"

[tool.sphinx-pyproject]
language = "en"
package_root = "mokka"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx_rtd_theme",
    "sphinx.ext.mathjax",
]
templates_path = [ "_templates", ]
html_static_path = [ "_static", ]
source_suffix = ".rst"
master_doc = "index"
html_theme = "sphinx_rtd_theme"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]
[tool.tox]
legacy_tox_ini = """
[tox]
description = list of environments against which tox runs the tests
envlist =
    flake8
    black
    pydocstyle
    3.10
    3.11
    3.12

# See https://tox.readthedocs.io/en/latest/example/package.html#flit
isolated_build = True
isolated_build_env = build
skip_missing_interpreters = True
py_version =
    3.10, flake8, black, pydocstyle: 3.10
    3.11: 3.11
    3.12: 3.12


[gh-actions]
python =
    3.10: flake8, black, pydocstyle, py310
    3.11: 3.11
    3.12: 3.12

[testenv]
# install pytest in the virtualenv where commands will be executed
allowlist_externals =
    uv
    bash
setenv =
    PYTHONUNBUFFERED = yes
    PIP_PREFER_BINARY = 1
passenv = *
extras =
  torch
  dev
# This is already the default, but we include it here
# to remind ourselves that usedevelop is incompatible with flit,
# see https://tox.readthedocs.io/en/latest/config.html#conf-usedevelop
usedevelop = False
commands_pre =
    uv venv --python {[tox]py_version}
    uv sync --dev --all-extras --active
commands =
    uv run pytest {env:PYTEST_MARKERS:} {env:PYTEST_EXTRA_ARGS:} {posargs:-vv}

[testenv:flake8]
description = this environments checks for flake8 and black
deps =
    black==22.3.0
    flake8
    build
skip_install = true
commands =
    flake8 src tests

[testenv:pydocstyle]
description = this environments checks formatting with pydocstyle
deps =
    pydocstyle
skip_install = true
commands =
    pydocstyle --count src/

[testenv:black]
description = reformats the code using black
deps =
    black==22.3.0
skip_install = true
commands =
    black src tests
"""

[project]
authors = [
    {name = "Andrej Rode", email = "rode@kit.edu"},
    {name = "Shrinivas Chimmalgi", email = "shrinivas.chimmalgi@kit.edu"},
    {name = "Benedikt Geiger", email = "benedikt.geiger@kit.edu"},
    {name = "Laurent Schmalen", email = "laurent.schmalen@kit.edu"},
]
maintainers = [
    {name = "Andrej Rode", email = "rode@kit.edu"},
    {name = "Shrinivas Chimmalgi", email = "shrinivas.chimmalgi@kit.edu"},
    {name = "Benedikt Geiger", email = "benedikt.geiger@kit.edu"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "attrs<24.0.0,>=23.2.0",
    "numpy<2.0.0,>=1.26.4",
    "torch<3.0.0,>=2.5.1",
    "torchaudio<3.0.0,>=2.5.1",
    "matplotlib<4.0.0,>=3.9.2",
    "scipy<2.0.0,>=1.13.1",
    "pyqtgraph<1.0.0,>=0.13.7",
    "jaxtyping<1.0.0,>=0.2.36",
]
name = "mokka"
readme = "README.md"
version = "1.1.0"
description = "A machine learning toolbox for communications engineering"
keywords = [
    "communications engineering",
    "machine learning",
]

[project.optional-dependencies]
tf = [
   "sionna",
]
remotelog = [
   "wandb",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "pytest-datafiles",
    "black",
    "flake8",
    "pylint",
    "python-lsp-server[all]",
    "pyls-flake8",
    "python-lsp-black",
    "sphinx",
    "sphinx-pyproject",
    "sphinx-rtd-theme",
    "tox",
    "tox-gh-actions",
]
